Nextauth,utils,faker,models

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,17 @@ a {
     background: black;
   }
 }
+
+/* @media (prefers-color-scheme: dark) {
+  html {
+    filter: invert(100%);
+  }
+
+  img {
+    filter: invert(100%);
+  }
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
